[package]
name = "generals-rs"
version = "0.1.0"
authors = ["Corentin Henry <corentinhenry@gmail.com>"]

[dependencies]
rand = "0.4.2"
fera-unionfind = "0.1.0"
# rocket = "0.3"
# rocket_codegen = "0.3"
env_logger = "*"
tungstenite = "0.5.3"
futures = "0.1"
tokio-timer = "0.2.1"
tokio-core = "0.1.16"
tokio-io= "0.1"
tokio-tungstenite = "0.5.1"
serde = "1.0.37"
serde_json = "1.0.13"
serde_derive = "1.0.37"
log = "0.4.1"
