[package]
name = "generals-rs"
version = "0.1.0"
authors = ["Corentin Henry <corentinhenry@gmail.com>"]

[dependencies]
rand = "0.6.5"
fera-unionfind = "0.1.0"
actix-web = "*"
env_logger = "0.6.1"
tungstenite = "0.6.1"
futures = "0.1.25"
tokio-timer = "0.2.10"
tokio-core = "0.1.17"
tokio-io= "0.1.12"
tokio-tungstenite = "0.6.0"
serde = "1.0.89"
serde_json = "1.0.39"
serde_derive = "1.0.89"
log = "0.4.6"
